Update ox-texinfo+ usage to use org texinfo support

--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -378,7 +378,7 @@ Node selection is achieved via the ~completing-read~ interface, typically
 through ~org-roam-node-read~. The presentation of these nodes are governed by
 ~org-roam-node-display-template~.
 
-- Variable: org-roam-node-display-template
+- Variable: org-roam-node-display-template ::
 
   Configures display formatting for Org-roam node.
 
@@ -458,7 +458,7 @@ additionally trying to process these links. Use
 ~org-roam-db-extra-links-elements~ to specify which additional Org AST element
 types to consider.
 
-- Variable: org-roam-db-extra-links-elements
+- Variable: org-roam-db-extra-links-elements ::
 
   The list of Org element types to include for parsing by Org-roam.
 
@@ -472,7 +472,7 @@ property drawers. For example, we would not want ~ROAM_REFS~ links to be
 self-referential. Hence, to exclude specific keys, we use
 ~org-roam-db-extra-links-exclude-keys~.
 
-- Variable: org-roam-db-extra-links-exclude-keys
+- Variable: org-roam-db-extra-links-exclude-keys ::
 
   Keys to ignore when mapping over links.
 
@@ -491,7 +491,7 @@ However, depending on how large your Org files are, database updating can be a
 slow operation. You can disable the automatic updating of the database by
 setting ~org-roam-db-update-on-save~ to ~nil~.
 
-- Variable: org-roam-db-update-on-save
+- Variable: org-roam-db-update-on-save ::
 
 If t, update the Org-roam database upon saving the file. Disable this if your
 files are large and updating the database is slow.
@@ -513,14 +513,14 @@ two main commands to use here:
 To bring up a buffer that tracks the current node at point, call ~M-x
 org-roam-buffer-toggle~.
 
-- Function: org-roam-buffer-toggle
+- Function: org-roam-buffer-toggle ::
 
   Toggle display of the ~org-roam-buffer~.
 
 To bring up a buffer that's dedicated for a specific node, call ~M-x
 org-roam-buffer-display-dedicated~.
 
-- Function: org-roam-buffer-display-dedicated
+- Function: org-roam-buffer-display-dedicated ::
 
   Launch node dedicated Org-roam buffer without visiting the node itself.
 
@@ -649,12 +649,12 @@ To assign an alias to a node, add the "ROAM_ALIASES" property to the node:
 
 Alternatively, Org-roam provides some functions to add or remove aliases.
 
-- Function: org-roam-alias-add alias
+- Function: org-roam-alias-add alias ::
 
   Add ALIAS to the node at point. When called interactively, prompt for the
   alias to add.
 
-- Function: org-roam-alias-remove
+- Function: org-roam-alias-remove ::
 
   Remove an alias from the node at point.
 
@@ -696,12 +696,12 @@ key and a URL at the same time.
 
 Org-roam also provides some functions to add or remove refs.
 
-- Function: org-roam-ref-add ref
+- Function: org-roam-ref-add ref ::
 
   Add REF to the node at point. When called interactively, prompt for the
   ref to add.
 
-- Function: org-roam-ref-remove
+- Function: org-roam-ref-remove ::
 
   Remove a ref from the node at point.
 
@@ -798,7 +798,7 @@ to ~t~:
 (setq org-roam-completion-everywhere t)
 #+end_src
 
-- Variable: org-roam-completion-everywhere
+- Variable: org-roam-completion-everywhere ::
 
 When non-nil, provide link completion matching outside of Org links.
 
@@ -1129,7 +1129,7 @@ generating images using [[https://graphviz.org/][Graphviz]]. The graph can also 
 
 The entry point to graph creation is ~org-roam-graph~.
 
-- Function: org-roam-graph & optional arg node
+- Function: org-roam-graph & optional arg node ::
 
 Build and display a graph for NODE.
 ARG may be any of the following values:
@@ -1138,7 +1138,7 @@ ARG may be any of the following values:
   - ~integer~   an integer argument ~N~ will show the graph for the connected
                 components to node up to ~N~ steps away.
 
-- User Option: org-roam-graph-executable
+- User Option: org-roam-graph-executable ::
 
   Path to the graphing executable (in this case, Graphviz). Set this if Org-roam
   is unable to find the Graphviz executable on your system.
@@ -1146,7 +1146,7 @@ ARG may be any of the following values:
   You may also choose to use ~neato~ in place of ~dot~, which generates a more
   compact graph layout.
 
-- User Option: org-roam-graph-viewer
+- User Option: org-roam-graph-viewer ::
 
   Org-roam defaults to using Firefox (located on PATH) to view the SVG, but you
   may choose to set it to:
@@ -1172,22 +1172,22 @@ Graphviz provides many options for customizing the graph output, and Org-roam
 supports some of them. See https://graphviz.gitlab.io/_pages/doc/info/attrs.html
 for customizable options.
 
-- User Option: org-roam-graph-filetype
+- User Option: org-roam-graph-filetype ::
 
   The file type to generate for graphs. This defaults to ~"svg"~.
 
-- User Option: org-roam-graph-extra-config
+- User Option: org-roam-graph-extra-config ::
 
   Extra options passed to graphviz for the digraph (The "G" attributes).
   Example: ~'~(("rankdir" . "LR"))~
 
-- User Option: org-roam-graph-node-extra-config
+- User Option: org-roam-graph-node-extra-config ::
 
   An alist of options to style the nodes.
   The car of the alist node type such as ~"id"~, or ~"http"~. The cdr of the
   list is another alist of Graphviz node options (the "N" attributes).
 
-- User Option: org-roam-graph-edge-extra-config
+- User Option: org-roam-graph-edge-extra-config ::
 
   Extra options for edges in the graphviz output (The "E" attributes).
   Example: ~'(("dir" . "back"))~
@@ -1201,11 +1201,11 @@ Org-journal with ~org-roam-dailies~.
 
 For ~org-roam-dailies~ to work, you need to define two variables:
 
-- Variable: ~org-roam-dailies-directory~
+- Variable: ~org-roam-dailies-directory~ ::
 
   Path to daily-notes. This path is relative to ~org-roam-directory~.
 
-- Variable: ~org-roam-dailies-capture-templates~
+- Variable: ~org-roam-dailies-capture-templates~ ::
 
   Capture templates for daily-notes in Org-roam.
 
@@ -1227,31 +1227,31 @@ See [[*The Templating System][The Templating System]] for creating new templates
 
 ~org-roam-dailies~ provides these interactive functions:
 
-- Function: ~org-roam-dailies-capture-today~ &optional goto
+- Function: org-roam-dailies-capture-today &optional goto ::
 
   Create an entry in the daily note for today.
 
   When ~goto~ is non-nil, go to the note without creating an entry.
 
-- Function: ~org-roam-dailies-goto-today~
+- Function: org-roam-dailies-goto-today ::
 
   Find the daily note for today, creating it if necessary.
 
 There are variants of those commands for ~-yesterday~ and ~-tomorrow~:
 
-- Function: ~org-roam-dailies-capture-yesterday~ n &optional goto
+- Function: org-roam-dailies-capture-yesterday n &optional goto ::
 
   Create an entry in the daily note for yesterday.
 
   With numeric argument ~n~, use the daily note ~n~ days in the past.
 
-- Function: ~org-roam-dailies-goto-yesterday~
+- Function: org-roam-dailies-goto-yesterday ::
 
   With numeric argument N, use the daily-note N days in the future.
 
 There are also commands which allow you to use Emacs’s ~calendar~ to find the date
 
-- Function: ~org-roam-dailies-capture-date~
+- Function: org-roam-dailies-capture-date ::
 
   Create an entry in the daily note for a date using the calendar.
 
@@ -1260,21 +1260,21 @@ There are also commands which allow you to use Emacs’s ~calendar~ to find the 
   With a 'C-u' prefix or when ~goto~ is non-nil, go the note without
   creating an entry.
 
-- Function: ~org-roam-dailies-goto-date~
+- Function: org-roam-dailies-goto-date ::
 
   Find the daily note for a date using the calendar, creating it if necessary.
 
   Prefer past dates, unless ~prefer-future~ is non-nil.
 
-- Function: ~org-roam-dailies-find-directory~
+- Function: org-roam-dailies-find-directory ::
 
   Find and open ~org-roam-dailies-directory~.
 
-- Function: ~org-roam-dailies-goto-previous-note~
+- Function: org-roam-dailies-goto-previous-note ::
 
   When in an daily-note, find the previous one.
 
-- Function: ~org-roam-dailies-goto-next-note~
+- Function: org-roam-dailies-goto-next-note ::
 
   When in an daily-note, find the next one.
 ** org-roam-export
@@ -1664,13 +1664,12 @@ that extensions/customizations are robust to change, extensions should only use
 The node interface is cleanly defined using ~cl-defstruct~. The primary
 method to access nodes is ~org-roam-node-at-point~ and ~org-roam-node-read~:
 
-- Function: org-roam-node-at-point &optional assert
+- Function: org-roam-node-at-point &optional assert ::
 
   Return the node at point. If ASSERT, throw an error if there is no node at
   point.
 
-- Function: org-roam-node-read &optional initial-input filter-fn sort-fn
-  require-match
+- Function: org-roam-node-read &optional initial-input filter-fn sort-fn require-match ::
 
   Read and return an `org-roam-node'.
   INITIAL-INPUT is the initial minibuffer prompt value. FILTER-FN
@@ -1705,7 +1704,7 @@ Org-roam applies some patching over Org's capture system to smooth out the user
 experience, and sometimes it is desirable to use Org-roam's capturing system
 instead. The exposed function to be used in extensions is ~org-roam-capture-~:
 
-- Function: org-roam-capture- &key goto keys node info props templates
+- Function: org-roam-capture- &key goto keys node info props templates ::
 
   Main entry point.
   GOTO and KEYS correspond to `org-capture' arguments.
