--- a/tests/roam-files/with-alias.org
+++ b/tests/roam-files/with-alias.org
@@ -1,5 +1,5 @@
 :PROPERTIES:
 :ID: 57ff3ce7-5bda-4825-8fca-c09f523e87ba
-:ROAM_ALIASES: Batman
+:ROAM_ALIASES: Batman "The Dark Knight"
 :END:
 #+title: Bruce Wayne
