--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -717,9 +717,9 @@ support.
 
 ** Using the Cached Information
 
-It is common to use take reference notes for academic papers. To designate the
-node to be the canonical node for the academic paper, we can use its unique
-citation key:
+It is common to take notes on academic reference meterial. To designate a node
+as the canonical node for a particular reference, we can use its unique citation
+key:
 
 #+begin_src org
 ,* Probabilistic Robotics
