--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1034,9 +1034,9 @@ support.
 @node Using the Cached Information
 @section Using the Cached Information
 
-It is common to use take reference notes for academic papers. To designate the
-node to be the canonical node for the academic paper, we can use its unique
-citation key:
+It is common to take notes on academic reference meterial. To designate a node
+as the canonical node for a particular reference, we can use its unique citation
+key:
 
 @example
 * Probabilistic Robotics
